[project]
name = "ai-genai-image-generation"
version = "0.1.0"
description = "Generative AI image generation models: Autoencoder, VAE, cVAE, WGAN, and DDPM trained on MNIST"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
torch = ">=2.7.0"
torchvision = ">=0.22.0"
matplotlib = ">=3.10.0"
tqdm = ">=4.67.0"
pyyaml = ">=6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-cov = ">=6.1.0"
ruff = ">=0.11.0"

[tool.poetry]
packages = [{include = "ai_genai_image_generation", from = "src"}]

[build-system]
requires = ["poetry-core>=2.1.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-auto-encoder = "ai_genai_image_generation.main:run_auto_encoder"
run-vae = "ai_genai_image_generation.main:run_vae"
run-cvae = "ai_genai_image_generation.main:run_cvae"
run-wgan = "ai_genai_image_generation.main:run_wgan"
run-diffusion = "ai_genai_image_generation.main:run_diffusion"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ai_genai_image_generation --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]
